# acyclic

./: .gitignore  Cargo.toml  README.md  format.sh  lint.sh
.githooks/: commit-msg  pre-commit
.github/workflows/: lint.yml
backend/: Cargo.toml  README.md
backend/schemas/: initial_schema.sql
backend/src/: main.rs
frontend/: Cargo.lock.license  Cargo.toml
frontend/src/: main.rs
