# SPDX-FileCopyrightText: 2025 Matt Gleason <mattg3398@gmail.com>
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "backend"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.10.2"
